<resources>
    <string name="app_name">IMC Calculadora</string>
    <string name="edittext_height_m_hint">Altura (m)</string>
    <string name="edittext_weight_kg_hint">Peso (kg)</string>
    <string name="button_calculate_text">Calcular</string>
    <string name="textview_imc_value_default">0</string>
    <string name="textview_imc_status_default">Desconhecido</string>
    <string name="imc_status_very_underweight">Muito abaixo do peso</string>
    <string name="imc_status_underweight">Abaixo do peso</string>
    <string name="imc_status_normal_weight">Peso normal</string>
    <string name="imc_status_overweight">Acima do peso</string>
    <string name="imc_status_obesity_1">Obesidade I</string>
    <string name="imc_status_obesity_2">Obesidade II (severa)</string>
    <string name="imc_status_obesity_3">Obesidade III (mórbida)</string>
    <string name="imc_value_formatted">%.2f</string>
    <string name="textlayout_height_invalid">Altura inválida</string>
    <string name="textlayout_weight_invalid">Peso inválido</string>
</resources>