<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/component_spacing"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edittext_height_m"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_height_m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_height_m_hint"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edittext_weight_kg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/component_spacing"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_edittext_height_m">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_weight_kg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_weight_kg_hint"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/component_spacing"
        android:text="@string/button_calculate_text"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_edittext_weight_kg" />

    <TextView
        android:id="@+id/text_imc_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_imc_value_default"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/text_imc_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_calculate"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/text_imc_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_imc_status_default"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_calculate" />

</androidx.constraintlayout.widget.ConstraintLayout>